@@ -4,7 +4,12 @@ repoze.mailin Changelog
 After 0.1.3 (unreleased)
 ------------------------
 
-- 
+- Fixed case where pop with multiple pending IDs and a given isolation level
+  would cause the delete to fail with 'database locked'.  See:
+  https://bugs.launchpad.net/karl3/+bug/364251
+
+- Fixed bug found by inspection where "underflow" on pop would leave the
+  message IDs which *had* been returned on the queue.
 
 
 0.1.3 (2009-03-13)
